--- a/provisioning/roles/nginx/files/etc/nginx/conf.d/default.conf
+++ b/provisioning/roles/nginx/files/etc/nginx/conf.d/default.conf
@@ -8,6 +8,7 @@ server {
     root /var/www/html;
     access_log /var/log/nginx/access.log main;
     client_max_body_size 500M;
+    index index.html index.php;
 
     location ~ \.php {
         fastcgi_pass          phpfpm;
